Stylesheet/emote/tag updates 2012-10-19

--- a/emotes/mylittlebannertest.yaml
+++ b/emotes/mylittlebannertest.yaml
@@ -335,7 +335,7 @@
     Size: [133, 150]
 /doapinkieroll:
   null:
-    Image: http://c.thumbs.redditmedia.com/M6VGiFy_D0aHhee8.png
+    Image: http://b.thumbs.redditmedia.com/NQ5GBLgx2D1J4Dvs.png
     Size: [106, 138]
 /downvote:
   null:
@@ -425,7 +425,7 @@
     Size: [150, 150]
 /pproll:
   null:
-    Image: http://c.thumbs.redditmedia.com/M6VGiFy_D0aHhee8.png
+    Image: http://b.thumbs.redditmedia.com/NQ5GBLgx2D1J4Dvs.png
     Size: [106, 138]
 /ppsong:
   null:
