--- a/emotes/pinkiepie.yaml
+++ b/emotes/pinkiepie.yaml
@@ -162,3 +162,8 @@
   null:
     CSS: {display: inline-block, padding-right: 100%}
     Type: Custom
+/strut:
+  null:
+    CSS: {margin-left: 3px, margin-right: 3px}
+    Image: http://d.thumbs.redditmedia.com/SafdE2_d6fF_kzSi.png
+    Size: [71, 150]
