--- a/emotes/tacoshy.yaml
+++ b/emotes/tacoshy.yaml
@@ -112,6 +112,10 @@
   null:
     Image: http://e.thumbs.redditmedia.com/DGgcmtbDXJztTTqF.png
     Size: [550, 342]
+/tacosmug:
+  null:
+    Image: http://a.thumbs.redditmedia.com/kMNFQnzs6XAdT1jH.png
+    Size: [458, 414]
 /tacosnack:
   null:
     CSS: {margin-left: 3px, margin-right: 3px}
