--- a/tags/tacoshy.yaml
+++ b/tags/tacoshy.yaml
@@ -25,6 +25,7 @@
 /taconibbles: [+animote, +fluttershy, +foodmane, +pinkiepie]
 /tacosalute: [+fluttershy, +foodmane]
 /tacoshywillmurderyouuntilyouredead: [+fluttershy, +foodmane]
+/tacosmug: [+fluttershy, +foodmane]
 /tacosnack: [+animote, +fluttershy, +foodmane]
 /tacostare: [+fluttershy, +foodmane]
 /tacothis: [+fluttershy, +foodmane]
