--- a/tags/vinylscratch.yaml
+++ b/tags/vinylscratch.yaml
@@ -11,6 +11,7 @@
 /vs06: [+v]
 /vs07: [+v]
 /vs08: [+v]
+/vs09: [+v]
 /vs10: [+v]
 /vs11: [+v]
 /vs12: [+v]
@@ -40,7 +41,7 @@
 /vshair: [+vinylscratch]
 /vshappy: [+vinylscratch]
 /vshey: [+vinylscratch]
-/vshnngg: [+nonpony]
+/vshnngg: [+v]
 /vshooves: [+vinylscratch]
 /vsjuice: [+vinylscratch]
 /vslaying: [+vinylscratch]
