--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -9,6 +9,7 @@
 ################################################################################
 
 Subreddits:
+- adviceponies
 - ainbowdash
 - applebloom
 - applejack
