Stylesheet/emote/tag updates 2012-10-19

--- a/emotes/mylittlemotorhead.yaml
+++ b/emotes/mylittlemotorhead.yaml
@@ -893,7 +893,7 @@
     Size: [70, 70]
 /flutterbike:
   null:
-    Image: http://a.thumbs.redditmedia.com/s4TPhX1NWzb4stOl.png
+    Image: http://b.thumbs.redditmedia.com/kqgd0WsdIOjfyw2I.png
     Size: [200, 140]
 /flutterblush:
   null:
@@ -999,6 +999,11 @@
     Image: http://b.thumbs.redditmedia.com/6ux22HrLyI5S0NcC.png
     Offset: [-140, -280]
     Size: [70, 70]
+/kdanceporsche:
+  null:
+    Image: http://b.thumbs.redditmedia.com/kqgd0WsdIOjfyw2I.png
+    Offset: [-234, -145]
+    Size: [300, 144]
 /l00:
   null:
     Image: http://e.thumbs.redditmedia.com/craJqX1YayP1v31j.png
@@ -1428,7 +1433,7 @@
     Size: [70, 70]
 /rallytwi:
   null:
-    Image: http://a.thumbs.redditmedia.com/s4TPhX1NWzb4stOl.png
+    Image: http://b.thumbs.redditmedia.com/kqgd0WsdIOjfyw2I.png
     Offset: [0, -140]
     Size: [234, 199]
 /rangel:
@@ -2912,7 +2917,7 @@
     Size: [70, 70]
 /stigpony:
   null:
-    Image: http://a.thumbs.redditmedia.com/s4TPhX1NWzb4stOl.png
+    Image: http://b.thumbs.redditmedia.com/kqgd0WsdIOjfyw2I.png
     Offset: [-200, 0]
     Size: [100, 116]
 /swagintosh:
@@ -3019,7 +3024,7 @@
     Size: [70, 70]
 /wildstig:
   null:
-    Image: http://a.thumbs.redditmedia.com/s4TPhX1NWzb4stOl.png
+    Image: http://b.thumbs.redditmedia.com/kqgd0WsdIOjfyw2I.png
     Offset: [-300, 0]
     Size: [100, 145]
 /wutlestia:
