--- a/emotes/mylittlensfw.yaml
+++ b/emotes/mylittlensfw.yaml
@@ -19,6 +19,10 @@
   null:
     Image: http://a.thumbs.redditmedia.com/65RFz5aX7WWdZ1k0.png
     Size: [1700, 117]
+/orschemote:
+  null:
+    Image: http://b.thumbs.redditmedia.com/2Tde7I6xFl9W0aoI.png
+    Size: [300, 400]
 /pinkieshake:
   null:
     Image: http://d.thumbs.redditmedia.com/aLLkKhXAcGzLcXbE.png
