--- a/emotes/tbpimagedump.yaml
+++ b/emotes/tbpimagedump.yaml
@@ -520,6 +520,7 @@
 /celestfly:
   null:
     Image: http://e.thumbs.redditmedia.com/B_S4lHyAF-Pugrcj.png
+    Offset: [-70, -70]
     Size: [70, 70]
 /celestpunk:
   null:
@@ -531,10 +532,6 @@
     Image: http://e.thumbs.redditmedia.com/B_S4lHyAF-Pugrcj.png
     Offset: [0, -70]
     Size: [70, 70]
-/celetfly:
-  null:
-    CSS: {background-position: -70px -70px}
-    Type: Custom
 /celwhatthe:
   null:
     Image: http://e.thumbs.redditmedia.com/B_S4lHyAF-Pugrcj.png
