--- a/tags/mylittlemotorhead.yaml
+++ b/tags/mylittlemotorhead.yaml
@@ -1,4 +1,5 @@
 /flutterbike: [+fluttershy]
+/kdanceporsche: [+ocpony]
 /rallytwi: [+pinkiepie, +twilightsparkle]
 /stigpony: [+ocpony]
 /wfworking: [+animote, +wildfire]
