--- a/tags/mylittlensfw.yaml
+++ b/tags/mylittlensfw.yaml
@@ -3,6 +3,7 @@
 /derpyshake: [+animote, +derpy, +nsfw]
 /fluttershake: [+animote, +fluttershy, +nsfw]
 /lolwhatisthisidonteven: [+remove]
+/orschemote: [+animote, +mashup, +nsfw, +rainbowdash]
 /pinkieshake: [+animote, +nsfw, +pinkiepie]
 /rainbowshake: [+animote, +nsfw, +rainbowdash]
 /rarshake: [+animote, +nsfw, +rarity]
