--- a/tags/tbpimagedump.yaml
+++ b/tags/tbpimagedump.yaml
@@ -78,7 +78,7 @@
 /bpf68: [+v]
 /bpf69: [+v]
 /bpf70: [+v]
-/bpf71: [+princesscelestia, +sunglasses]
+/bpf71: [+v]
 /bpf72: [+v]
 /bpf73: [+v]
 /bpf74: [+v]
@@ -109,10 +109,9 @@
 /bpf99: [+v]
 /celbrows: [+animote, +princesscelestia]
 /celbutterfly: [+filly, +princesscelestia]
-/celestfly: [+v]
+/celestfly: [+princesscelestia, +sunglasses]
 /celestpunk: [+princesscelestia]
 /celestrage: [+princesscelestia]
-/celetfly: [+broken]
 /celwhatthe: [+princesscelestia, +sunglasses]
 /chaos: [+animote, +applebloom]
 /cheerdizzy: [+animote, +cheerilee]
