Stylesheet/emote/tag updates 2012-10-21

--- a/emotes/falloutequestria.yaml
+++ b/emotes/falloutequestria.yaml
@@ -5,8 +5,8 @@
     Size: [70, 70]
 /bjboom:
   null:
-    Image: http://e.thumbs.redditmedia.com/ABTSDvwleJOtTPd4.png
-    Offset: [0, -225]
+    Image: http://b.thumbs.redditmedia.com/EgFWss5qGCX79iqy.png
+    Offset: [0, -230]
     Size: [70, 70]
 /bjbubbles:
   null:
@@ -37,10 +37,20 @@
     Image: http://d.thumbs.redditmedia.com/RcQxtSagCYQyGGk9.png
     Offset: [0, -280]
     Size: [100, 100]
+/calamitywtf:
+  null:
+    Image: http://b.thumbs.redditmedia.com/EgFWss5qGCX79iqy.png
+    Offset: [0, -535]
+    Size: [78, 101]
 /charity:
   null:
     Image: http://d.thumbs.redditmedia.com/RcQxtSagCYQyGGk9.png
     Offset: [0, -140]
+    Size: [70, 70]
+/drrampage:
+  null:
+    Image: http://b.thumbs.redditmedia.com/EgFWss5qGCX79iqy.png
+    Offset: [0, -305]
     Size: [70, 70]
 /fightcalamity:
   null:
@@ -76,6 +86,11 @@
     Image: http://c.thumbs.redditmedia.com/cRA-YgdTGmGXvxjn.png
     Offset: [0, -900]
     Size: [103, 150]
+/harmony:
+  null:
+    Image: http://b.thumbs.redditmedia.com/EgFWss5qGCX79iqy.png
+    Offset: [0, -640]
+    Size: [200, 147]
 /homage:
   null:
     Image: http://d.thumbs.redditmedia.com/RcQxtSagCYQyGGk9.png
@@ -121,9 +136,14 @@
     Image: http://d.thumbs.redditmedia.com/RcQxtSagCYQyGGk9.png
     Offset: [-70, 0]
     Size: [70, 70]
+/lpinspire:
+  null:
+    Image: http://b.thumbs.redditmedia.com/EgFWss5qGCX79iqy.png
+    Offset: [0, -380]
+    Size: [88, 150]
 /lpnotsure:
   null:
-    Image: http://e.thumbs.redditmedia.com/ABTSDvwleJOtTPd4.png
+    Image: http://b.thumbs.redditmedia.com/EgFWss5qGCX79iqy.png
     Size: [150, 150]
 /lpnotwant:
   null:
@@ -185,8 +205,8 @@
     Size: [70, 70]
 /p21fh:
   null:
-    Image: http://e.thumbs.redditmedia.com/ABTSDvwleJOtTPd4.png
-    Offset: [0, -150]
+    Image: http://b.thumbs.redditmedia.com/EgFWss5qGCX79iqy.png
+    Offset: [0, -155]
     Size: [70, 70]
 /p21fun:
   null:
