--- a/emotes/tacoshy.yaml
+++ b/emotes/tacoshy.yaml
@@ -89,7 +89,7 @@
     Size: [550, 549]
 /tacohug:
   null:
-    Image: http://b.thumbs.redditmedia.com/iSSTRlfInOPfhI0U.png
+    Image: http://b.thumbs.redditmedia.com/JIZppLcJ-0D3bw21.png
     Size: [883, 1080]
 /tacolean:
   null:
@@ -123,7 +123,7 @@
     Size: [400, 400]
 /tacostare:
   null:
-    Image: http://d.thumbs.redditmedia.com/4cNkOanfd4hqV8Uu.png
+    Image: http://b.thumbs.redditmedia.com/S3tui3aATLhA_7q7.png
     Size: [600, 553]
 /tacothis:
   null:
