--- a/tags/falloutequestria.yaml
+++ b/tags/falloutequestria.yaml
@@ -6,7 +6,9 @@
 /bjshooty: [+foe, +ocpony]
 /bjstare: [+foe, +ocpony]
 /calamity: [+foe, +ocpony]
+/calamitywtf: [+foe, +ocpony]
 /charity: [+foe, +ocpony]
+/drrampage: [+foe, +ocpony]
 /fightcalamity: [+foe, +ocpony]
 /foe21: [+broken]
 /foevictory: [+foe]
@@ -14,6 +16,7 @@
 /givemeec1101: [+foe]
 /glory: [+foe, +ocpony]
 /grifanywhere: [+foe, +oc]
+/harmony: [+foe, +ocpony]
 /homage: [+foe, +ocpony]
 /lacunae: [+foe, +ocpony]
 /lionmouse: [+foe, +ocpony]
@@ -23,6 +26,7 @@
 /lpfrown: [+foe, +ocpony]
 /lphappy: [+foe, +ocpony]
 /lphurt: [+foe, +ocpony]
+/lpinspire: [+foe, +ocpony]
 /lpnotsure: [+foe, +ocpony]
 /lpnotwant: [+foe, +ocpony]
 /lpsad: [+foe, +ocpony]
