Stylesheet/emote/tag updates 2012-10-22, and rewriting emotes files to new extracter (forwards IGNORE flag)

--- a/emotes/mylittlensfw.yaml
+++ b/emotes/mylittlensfw.yaml
@@ -2,15 +2,34 @@
   null:
     Image: http://c.thumbs.redditmedia.com/AnTTFSQMzWG32Q2J.png
     Size: [200, 142]
+/applepussy:
+  null:
+    Image: http://b.thumbs.redditmedia.com/GUrfNHIaMEoN29eC.jpg
+    Size: [300, 360]
 /bestcentaur:
   null:
     Image: http://e.thumbs.redditmedia.com/5ndsCluVaPSIsPOR.png
     Offset: [0, -220]
     Size: [225, 250]
+/cheeripussy:
+  null:
+    Image: http://b.thumbs.redditmedia.com/GUrfNHIaMEoN29eC.jpg
+    Offset: [-600, -360]
+    Size: [300, 360]
+/derpypussy:
+  null:
+    Image: http://b.thumbs.redditmedia.com/GUrfNHIaMEoN29eC.jpg
+    Offset: [-300, -720]
+    Size: [300, 360]
 /derpyshake:
   null:
     Image: http://d.thumbs.redditmedia.com/dTMf8vUpr3H1p36i.png
     Size: [200, 142]
+/flutterpussy:
+  null:
+    Image: http://b.thumbs.redditmedia.com/GUrfNHIaMEoN29eC.jpg
+    Offset: [-600, 0]
+    Size: [300, 360]
 /fluttershake:
   null:
     Image: http://e.thumbs.redditmedia.com/KNptApdRa7Q2o5cd.png
@@ -23,14 +42,29 @@
   null:
     Image: http://b.thumbs.redditmedia.com/2Tde7I6xFl9W0aoI.png
     Size: [300, 400]
+/pinkiepussy:
+  null:
+    Image: http://b.thumbs.redditmedia.com/GUrfNHIaMEoN29eC.jpg
+    Offset: [-600, -720]
+    Size: [300, 360]
 /pinkieshake:
   null:
     Image: http://d.thumbs.redditmedia.com/aLLkKhXAcGzLcXbE.png
     Size: [200, 142]
+/rainbowpussy:
+  null:
+    Image: http://b.thumbs.redditmedia.com/GUrfNHIaMEoN29eC.jpg
+    Offset: [0, -360]
+    Size: [300, 360]
 /rainbowshake:
   null:
     Image: http://c.thumbs.redditmedia.com/oJv9L-ps-r1fiTsb.png
     Size: [200, 142]
+/raripussy:
+  null:
+    Image: http://b.thumbs.redditmedia.com/GUrfNHIaMEoN29eC.jpg
+    Offset: [0, -720]
+    Size: [300, 360]
 /rarshake:
   null:
     Image: http://a.thumbs.redditmedia.com/scNq2aHa9bhqSa00.png
@@ -39,6 +73,11 @@
   null:
     Image: http://b.thumbs.redditmedia.com/wJpqSdGt6QBakCAa.png
     Size: [200, 142]
+/sparklepussy:
+  null:
+    Image: http://b.thumbs.redditmedia.com/GUrfNHIaMEoN29eC.jpg
+    Offset: [-300, -360]
+    Size: [300, 360]
 /sphlyrafun:
   null:
     Image: http://f.thumbs.redditmedia.com/XbRIUePsEIGJ1xSM.png
@@ -47,6 +86,11 @@
   null:
     Image: http://e.thumbs.redditmedia.com/5ndsCluVaPSIsPOR.png
     Size: [225, 220]
+/trixiepussy:
+  null:
+    Image: http://b.thumbs.redditmedia.com/GUrfNHIaMEoN29eC.jpg
+    Offset: [-300, 0]
+    Size: [300, 360]
 /twishake:
   null:
     Image: http://e.thumbs.redditmedia.com/-0Noimxj_BMbQpxF.png
