--- a/tags/pankakke.yaml
+++ b/tags/pankakke.yaml
@@ -4,6 +4,7 @@
 /apgshuffle: [+animote, +ocpony]
 /bugs: [+nonpony]
 /coconutmonkey: [+nonpony]
+/darkman: [+ocpony]
 /dinsfire: [+ocpony]
 /dintrot: [+v]
 /doctordrunk: [+doctorwho, +nonpony]
