--- a/emotes/applejack.yaml
+++ b/emotes/applejack.yaml
@@ -1,3 +1,182 @@
+/00:
+  null:
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
+    Size: [70, 70]
+  Ignore: true
+/01:
+  null:
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
+    Offset: [0, -70]
+    Size: [70, 70]
+  Ignore: true
+/02:
+  null:
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
+    Offset: [0, -140]
+    Size: [70, 70]
+  Ignore: true
+/03:
+  null:
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
+    Offset: [0, -210]
+    Size: [70, 70]
+  Ignore: true
+/04:
+  null:
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
+    Offset: [0, -280]
+    Size: [70, 70]
+  Ignore: true
+/05:
+  null:
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
+    Offset: [0, -350]
+    Size: [70, 70]
+  Ignore: true
+/06:
+  null:
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
+    Offset: [0, -420]
+    Size: [70, 70]
+  Ignore: true
+/07:
+  null:
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
+    Offset: [0, -490]
+    Size: [70, 70]
+  Ignore: true
+/08:
+  null:
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
+    Offset: [0, -560]
+    Size: [70, 70]
+  Ignore: true
+/09:
+  null:
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
+    Offset: [0, -630]
+    Size: [70, 70]
+  Ignore: true
+/10:
+  null:
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
+    Offset: [-70, 0]
+    Size: [70, 70]
+  Ignore: true
+/11:
+  null:
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
+    Offset: [-70, -70]
+    Size: [70, 70]
+  Ignore: true
+/12:
+  null:
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
+    Offset: [-70, -140]
+    Size: [70, 70]
+  Ignore: true
+/13:
+  null:
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
+    Offset: [-70, -210]
+    Size: [70, 70]
+  Ignore: true
+/14:
+  null:
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
+    Offset: [-70, -280]
+    Size: [70, 70]
+  Ignore: true
+/15:
+  null:
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
+    Offset: [-70, -350]
+    Size: [70, 70]
+  Ignore: true
+/16:
+  null:
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
+    Offset: [-70, -420]
+    Size: [70, 70]
+  Ignore: true
+/17:
+  null:
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
+    Offset: [-70, -490]
+    Size: [70, 70]
+  Ignore: true
+/18:
+  null:
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
+    Offset: [-70, -560]
+    Size: [70, 70]
+  Ignore: true
+/19:
+  null:
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
+    Offset: [-70, -630]
+    Size: [70, 70]
+  Ignore: true
+/20:
+  null:
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
+    Offset: [-140, 0]
+    Size: [70, 70]
+  Ignore: true
+/21:
+  null:
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
+    Offset: [-140, -70]
+    Size: [70, 70]
+  Ignore: true
+/22:
+  null:
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
+    Offset: [-140, -140]
+    Size: [70, 70]
+  Ignore: true
+/23:
+  null:
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
+    Offset: [-140, -210]
+    Size: [70, 70]
+  Ignore: true
+/24:
+  null:
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
+    Offset: [-140, -280]
+    Size: [70, 70]
+  Ignore: true
+/25:
+  null:
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
+    Offset: [-140, -350]
+    Size: [70, 70]
+  Ignore: true
+/26:
+  null:
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
+    Offset: [-140, -420]
+    Size: [70, 70]
+  Ignore: true
+/27:
+  null:
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
+    Offset: [-140, -490]
+    Size: [70, 70]
+  Ignore: true
+/28:
+  null:
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
+    Offset: [-140, -560]
+    Size: [70, 70]
+  Ignore: true
+/29:
+  null:
+    Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
+    Offset: [-140, -630]
+    Size: [70, 70]
+  Ignore: true
 /aj00:
   null:
     Image: http://a.thumbs.redditmedia.com/y4iWY_5sVrrI5HOf.png
