--- a/emotes/falloutequestria.yaml
+++ b/emotes/falloutequestria.yaml
@@ -5,7 +5,7 @@
     Size: [70, 70]
 /bjboom:
   null:
-    Image: http://b.thumbs.redditmedia.com/EgFWss5qGCX79iqy.png
+    Image: http://d.thumbs.redditmedia.com/b2w_EC7WkNbKu6fQ.png
     Offset: [0, -230]
     Size: [70, 70]
 /bjbubbles:
@@ -39,7 +39,7 @@
     Size: [100, 100]
 /calamitywtf:
   null:
-    Image: http://b.thumbs.redditmedia.com/EgFWss5qGCX79iqy.png
+    Image: http://d.thumbs.redditmedia.com/b2w_EC7WkNbKu6fQ.png
     Offset: [0, -535]
     Size: [78, 101]
 /charity:
@@ -49,7 +49,7 @@
     Size: [70, 70]
 /drrampage:
   null:
-    Image: http://b.thumbs.redditmedia.com/EgFWss5qGCX79iqy.png
+    Image: http://d.thumbs.redditmedia.com/b2w_EC7WkNbKu6fQ.png
     Offset: [0, -305]
     Size: [70, 70]
 /fightcalamity:
@@ -88,9 +88,9 @@
     Size: [103, 150]
 /harmony:
   null:
-    Image: http://b.thumbs.redditmedia.com/EgFWss5qGCX79iqy.png
+    Image: http://d.thumbs.redditmedia.com/b2w_EC7WkNbKu6fQ.png
     Offset: [0, -640]
-    Size: [200, 147]
+    Size: [200, 225]
 /homage:
   null:
     Image: http://d.thumbs.redditmedia.com/RcQxtSagCYQyGGk9.png
@@ -138,12 +138,12 @@
     Size: [70, 70]
 /lpinspire:
   null:
-    Image: http://b.thumbs.redditmedia.com/EgFWss5qGCX79iqy.png
+    Image: http://d.thumbs.redditmedia.com/b2w_EC7WkNbKu6fQ.png
     Offset: [0, -380]
     Size: [88, 150]
 /lpnotsure:
   null:
-    Image: http://b.thumbs.redditmedia.com/EgFWss5qGCX79iqy.png
+    Image: http://d.thumbs.redditmedia.com/b2w_EC7WkNbKu6fQ.png
     Size: [150, 150]
 /lpnotwant:
   null:
@@ -205,7 +205,7 @@
     Size: [70, 70]
 /p21fh:
   null:
-    Image: http://b.thumbs.redditmedia.com/EgFWss5qGCX79iqy.png
+    Image: http://d.thumbs.redditmedia.com/b2w_EC7WkNbKu6fQ.png
     Offset: [0, -155]
     Size: [70, 70]
 /p21fun:
