Stylesheet/emote/tag updates 2012-10-22

--- a/emotes/lyra.yaml
+++ b/emotes/lyra.yaml
@@ -8,6 +8,10 @@
     Image: http://b.thumbs.redditmedia.com/dXF0WCtBNMIoLHI1.png
     Offset: [-249, -2]
     Size: [196, 150]
+/implyra:
+  null:
+    Image: http://d.thumbs.redditmedia.com/L7bVPa7pjQuAP2m3.png
+    Size: [127, 150]
 /liera:
   null:
     Image: http://b.thumbs.redditmedia.com/dXF0WCtBNMIoLHI1.png
