--- a/emotes/mylittleandysonic1.yaml
+++ b/emotes/mylittleandysonic1.yaml
@@ -72,7 +72,7 @@
     Type: Custom
 /bmwat:
   null:
-    Image: http://a.thumbs.redditmedia.com/1OpfHm1h8HuzsUSH.png
+    Image: http://b.thumbs.redditmedia.com/EGOKQsMf03-wV9Wa.png
     Offset: [-156, -1666]
     Size: [83, 127]
 /bonfun:
@@ -112,7 +112,7 @@
     Size: [85, 127]
 /ch35:
   null:
-    Image: http://a.thumbs.redditmedia.com/1OpfHm1h8HuzsUSH.png
+    Image: http://b.thumbs.redditmedia.com/EGOKQsMf03-wV9Wa.png
     Offset: [0, -2466]
     Size: [113, 152]
 /chaosgun:
@@ -132,17 +132,17 @@
     Size: [216, 152]
 /cheerious:
   null:
-    Image: http://a.thumbs.redditmedia.com/1OpfHm1h8HuzsUSH.png
+    Image: http://b.thumbs.redditmedia.com/EGOKQsMf03-wV9Wa.png
     Offset: [0, -2162]
     Size: [147, 152]
 /cheerlikesit:
   null:
-    Image: http://a.thumbs.redditmedia.com/1OpfHm1h8HuzsUSH.png
+    Image: http://b.thumbs.redditmedia.com/EGOKQsMf03-wV9Wa.png
     Offset: [-113, -2466]
     Size: [125, 127]
 /chnuzzle:
   null:
-    Image: http://a.thumbs.redditmedia.com/1OpfHm1h8HuzsUSH.png
+    Image: http://b.thumbs.redditmedia.com/EGOKQsMf03-wV9Wa.png
     Offset: [0, -2466]
     Size: [113, 152]
 /chryswat:
@@ -157,12 +157,12 @@
     Size: [175, 127]
 /cmcexcited:
   null:
-    Image: http://a.thumbs.redditmedia.com/1OpfHm1h8HuzsUSH.png
+    Image: http://b.thumbs.redditmedia.com/EGOKQsMf03-wV9Wa.png
     Offset: [0, -2010]
     Size: [228, 152]
 /cordwithit:
   null:
-    Image: http://a.thumbs.redditmedia.com/1OpfHm1h8HuzsUSH.png
+    Image: http://b.thumbs.redditmedia.com/EGOKQsMf03-wV9Wa.png
     Offset: [0, -252]
     Size: [126, 252]
 /cowpony:
@@ -177,7 +177,7 @@
     Size: [198, 150]
 /crazypie:
   null:
-    Image: http://a.thumbs.redditmedia.com/1OpfHm1h8HuzsUSH.png
+    Image: http://b.thumbs.redditmedia.com/EGOKQsMf03-wV9Wa.png
     Offset: [0, -2314]
     Size: [141, 152]
 /creamsicle:
@@ -216,7 +216,7 @@
     Size: [221, 152]
 /derpoops:
   null:
-    Image: http://a.thumbs.redditmedia.com/1OpfHm1h8HuzsUSH.png
+    Image: http://b.thumbs.redditmedia.com/EGOKQsMf03-wV9Wa.png
     Offset: [0, -2769]
     Size: [106, 117]
 /derpshrug:
@@ -245,12 +245,12 @@
     Type: Custom
 /disamused:
   null:
-    Image: http://a.thumbs.redditmedia.com/1OpfHm1h8HuzsUSH.png
+    Image: http://b.thumbs.redditmedia.com/EGOKQsMf03-wV9Wa.png
     Offset: [-126, -252]
     Size: [118, 177]
 /disangry:
   null:
-    Image: http://a.thumbs.redditmedia.com/1OpfHm1h8HuzsUSH.png
+    Image: http://b.thumbs.redditmedia.com/EGOKQsMf03-wV9Wa.png
     Offset: [0, -908]
     Size: [195, 202]
 /disbored:
@@ -270,7 +270,7 @@
     Size: [154, 152]
 /disexcited:
   null:
-    Image: http://a.thumbs.redditmedia.com/1OpfHm1h8HuzsUSH.png
+    Image: http://b.thumbs.redditmedia.com/EGOKQsMf03-wV9Wa.png
     Offset: [0, -1489]
     Size: [173, 177]
 /disgusta:
@@ -280,7 +280,7 @@
     Size: [146, 152]
 /diskate:
   null:
-    Image: http://a.thumbs.redditmedia.com/1OpfHm1h8HuzsUSH.png
+    Image: http://b.thumbs.redditmedia.com/EGOKQsMf03-wV9Wa.png
     Size: [194, 252]
 /diswut:
   null:
@@ -488,7 +488,7 @@
     Type: Custom
 /foryou:
   null:
-    Image: http://a.thumbs.redditmedia.com/1OpfHm1h8HuzsUSH.png
+    Image: http://b.thumbs.redditmedia.com/EGOKQsMf03-wV9Wa.png
     Offset: [0, -706]
     Size: [204, 202]
 /frightenpie:
@@ -498,17 +498,17 @@
     Size: [113, 152]
 /genius:
   null:
-    Image: http://a.thumbs.redditmedia.com/1OpfHm1h8HuzsUSH.png
+    Image: http://b.thumbs.redditmedia.com/EGOKQsMf03-wV9Wa.png
     Offset: [-106, -2769]
     Size: [97, 102]
 /gildafriendship:
   null:
-    Image: http://a.thumbs.redditmedia.com/1OpfHm1h8HuzsUSH.png
+    Image: http://b.thumbs.redditmedia.com/EGOKQsMf03-wV9Wa.png
     Offset: [0, -1110]
     Size: [180, 202]
 /gildafury:
   null:
-    Image: http://a.thumbs.redditmedia.com/1OpfHm1h8HuzsUSH.png
+    Image: http://b.thumbs.redditmedia.com/EGOKQsMf03-wV9Wa.png
     Offset: [0, -1843]
     Size: [256, 167]
 /green!:
@@ -530,12 +530,12 @@
     Size: [160, 152]
 /herhorn:
   null:
-    Image: http://a.thumbs.redditmedia.com/1OpfHm1h8HuzsUSH.png
+    Image: http://b.thumbs.redditmedia.com/EGOKQsMf03-wV9Wa.png
     Offset: [0, -1110]
     Size: [180, 202]
 /hipstertrixie:
   null:
-    Image: http://a.thumbs.redditmedia.com/1OpfHm1h8HuzsUSH.png
+    Image: http://b.thumbs.redditmedia.com/EGOKQsMf03-wV9Wa.png
     Offset: [0, -1666]
     Size: [156, 177]
 /hoppy:
@@ -553,7 +553,7 @@
     Size: [251, 202]
 /iwapprove:
   null:
-    Image: http://a.thumbs.redditmedia.com/1OpfHm1h8HuzsUSH.png
+    Image: http://b.thumbs.redditmedia.com/EGOKQsMf03-wV9Wa.png
     Offset: [0, -1312]
     Size: [232, 177]
 /luna!:
@@ -592,12 +592,12 @@
     Size: [101, 152]
 /noidea:
   null:
-    Image: http://a.thumbs.redditmedia.com/1OpfHm1h8HuzsUSH.png
+    Image: http://b.thumbs.redditmedia.com/EGOKQsMf03-wV9Wa.png
     Offset: [-147, -2162]
     Size: [105, 152]
 /notenoughbooks:
   null:
-    Image: http://a.thumbs.redditmedia.com/1OpfHm1h8HuzsUSH.png
+    Image: http://b.thumbs.redditmedia.com/EGOKQsMf03-wV9Wa.png
     Offset: [0, -2618]
     Size: [184, 151]
 /orange!:
@@ -715,7 +715,7 @@
     Size: [162, 152]
 /rarimad:
   null:
-    Image: http://a.thumbs.redditmedia.com/1OpfHm1h8HuzsUSH.png
+    Image: http://b.thumbs.redditmedia.com/EGOKQsMf03-wV9Wa.png
     Offset: [0, -504]
     Size: [207, 202]
 /rarisup:
@@ -914,7 +914,7 @@
     Type: Custom
 /twinuzzle:
   null:
-    Image: http://a.thumbs.redditmedia.com/1OpfHm1h8HuzsUSH.png
+    Image: http://b.thumbs.redditmedia.com/EGOKQsMf03-wV9Wa.png
     Offset: [-141, -2314]
     Size: [112, 152]
 /twipoke:
@@ -951,6 +951,11 @@
     Image: http://f.thumbs.redditmedia.com/2EbVTZhdMrZvvTHG.png
     Offset: [0, -2351]
     Size: [141, 177]
+/twithis:
+  null:
+    Image: http://f.thumbs.redditmedia.com/2EbVTZhdMrZvvTHG.png
+    Offset: [0, -202]
+    Size: [210, 202]
 /txt!:
   null:
     CSS: {color: inherit!important, cursor: text!important}
