--- a/tags/lyra.yaml
+++ b/tags/lyra.yaml
@@ -1,5 +1,6 @@
 /heartstrings: [+lyra]
 /hellolyra: [+lyra]
+/implyra: [+animote, +lyra]
 /liera: [+lyra]
 /lyraawesome: [+lyra]
 /lyradat: [+lyra, +sunglasses]
