--- a/tags/mylittleandysonic1.yaml
+++ b/tags/mylittleandysonic1.yaml
@@ -174,6 +174,7 @@
 /twisign: [+imagemacro, +twilightsparkle]
 /twiteehee: [+twilightsparkle]
 /twiteeth: [+twilightsparkle]
+/twithis: [+v]
 /txt!: [+formatting]
 /umad: [+pinkiepie]
 /white!: [+formatting]
