Stylesheet/emote/tag updates 2012-10-23

--- a/emotes/flutterlounge.yaml
+++ b/emotes/flutterlounge.yaml
@@ -111,3 +111,11 @@
   null:
     Image: http://b.thumbs.redditmedia.com/nfXpsDt5ZUpDKRQs.png
     Size: [400, 500]
+/twilighthug:
+  null:
+    Image: http://c.thumbs.redditmedia.com/ZYRvNGKTsBsOC9zt.png
+    Size: [70, 70]
+/twirighthug:
+  null:
+    Image: http://c.thumbs.redditmedia.com/ZYRvNGKTsBsOC9zt.png
+    Size: [70, 70]
