--- a/emotes/mylittleandysonic1.yaml
+++ b/emotes/mylittleandysonic1.yaml
@@ -95,6 +95,10 @@
     Image: http://a.thumbs.redditmedia.com/YLUHfnn5zXXkkrEx.png
     Offset: [0, -2601]
     Size: [202, 152]
+/brd:
+  null:
+    Image: http://f.thumbs.redditmedia.com/W0xItPrYVx2yAjWw.png
+    Size: [120, 120]
 /bryvoodfun:
   null:
     Image: http://a.thumbs.redditmedia.com/oKR1l6L29UAOWRwB.png
