--- a/emotes/mylittlefoodmanes.yaml
+++ b/emotes/mylittlefoodmanes.yaml
@@ -12,8 +12,9 @@
     Size: [243, 210]
 /buttershy:
   null:
-    Image: http://b.thumbs.redditmedia.com/CZd5q6ssYNT8SoFa.png
-    Size: [227, 166]
+    Image: http://b.thumbs.redditmedia.com/7czNfcRFKj7Ef2tI.png
+    Offset: [-161, -322]
+    Size: [150, 150]
 /choctavia:
   null:
     Image: http://f.thumbs.redditmedia.com/mLWWV7k_h16ofvS5.png
@@ -36,12 +37,14 @@
     Size: [300, 128]
 /derpymousse:
   null:
-    Image: http://c.thumbs.redditmedia.com/YuBBF6Wxt2N-llQh.png
-    Size: [206, 180]
+    Image: http://b.thumbs.redditmedia.com/7czNfcRFKj7Ef2tI.png
+    Offset: [0, -322]
+    Size: [150, 150]
 /disugh:
   null:
-    Image: http://b.thumbs.redditmedia.com/8gESjqR46ssBT8aO.png
-    Size: [161, 150]
+    Image: http://b.thumbs.redditmedia.com/7czNfcRFKj7Ef2tI.png
+    Offset: [-322, -161]
+    Size: [150, 150]
 /doubledildo:
   null:
     Image: http://c.thumbs.redditmedia.com/p2CF5Pb9fdTB_XNz.png
@@ -64,16 +67,19 @@
     Size: [277, 290]
 /flutterchilli:
   null:
-    Image: http://f.thumbs.redditmedia.com/CK_ZRrkdhuAcURGG.png
-    Size: [127, 130]
+    Image: http://b.thumbs.redditmedia.com/7czNfcRFKj7Ef2tI.png
+    Offset: [-322, 0]
+    Size: [150, 150]
 /flutterrex:
   null:
-    Image: http://f.thumbs.redditmedia.com/upyeJHyjzwNhKoe_.png
-    Size: [266, 200]
+    Image: http://b.thumbs.redditmedia.com/7czNfcRFKj7Ef2tI.png
+    Offset: [-161, -161]
+    Size: [150, 150]
 /foodlove:
   null:
-    Image: http://f.thumbs.redditmedia.com/jdiSRETytsQWhDle.png
-    Size: [159, 150]
+    Image: http://b.thumbs.redditmedia.com/7czNfcRFKj7Ef2tI.png
+    Offset: [0, -161]
+    Size: [150, 150]
 /greatrage:
   null:
     Image: http://e.thumbs.redditmedia.com/b6eiAntIC4CUKnYF.png
@@ -167,16 +173,17 @@
     Size: [308, 206]
 /twiraptor:
   null:
-    Image: http://d.thumbs.redditmedia.com/KxtpozfASGMrDUNK.png
-    Size: [428, 300]
+    Image: http://b.thumbs.redditmedia.com/7czNfcRFKj7Ef2tI.png
+    Offset: [-161, 0]
+    Size: [150, 150]
 /twistballs:
   null:
     Image: http://b.thumbs.redditmedia.com/lstFXQBxfYPACSlm.png
     Size: [197, 195]
 /udnt:
   null:
-    Image: http://a.thumbs.redditmedia.com/-SAeXvZA6a4WRz8f.png
-    Size: [112, 100]
+    Image: http://b.thumbs.redditmedia.com/7czNfcRFKj7Ef2tI.png
+    Size: [150, 150]
 /whatthefacannons:
   null:
     Image: http://f.thumbs.redditmedia.com/MKfSvz6yeI2NGkdY.png
