--- a/tags/falloutequestria.yaml
+++ b/tags/falloutequestria.yaml
@@ -1,3 +1,4 @@
+/advicebj: [+foe, +imagemacro, +mashup, +ocpony]
 /anteup: [+foe, +ocpony]
 /bjboom: [+foe, +ocpony]
 /bjbubbles: [+animote, +foe, +ocpony]
@@ -5,6 +6,7 @@
 /bjscared: [+foe, +ocpony]
 /bjshooty: [+foe, +ocpony]
 /bjstare: [+foe, +ocpony]
+/bjsurprise: [+foe, +ocpony]
 /calamity: [+foe, +ocpony]
 /calamitywtf: [+foe, +ocpony]
 /charity: [+foe, +ocpony]
