--- a/tags/mylittleandysonic1.yaml
+++ b/tags/mylittleandysonic1.yaml
@@ -16,6 +16,7 @@
 /bonheart: [+bonbon, +heart]
 /bonwut: [+bonbon]
 /braefun: [+braeburn, +fun, +questionable]
+/brd: [+remove]
 /bryvoodfun: [+fun, +ocpony, +questionable]
 /cadancewat: [+cadance]
 /cadencewat: [+v]
