--- a/emotes/falloutequestria.yaml
+++ b/emotes/falloutequestria.yaml
@@ -1,3 +1,23 @@
+/advicebj:
+  null:
+    CSS: {color: white!important, cursor: default!important, font-family: 'Impact,sans-serif!important',
+      font-size: 26px!important, line-height: 24px!important, overflow: hidden!important,
+      position: relative!important, text-align: center!important, text-shadow: '2px
+        2px 2px black,-2px -2px 2px black,-2px 2px 2px black,2px -2px 2px black!important',
+      text-transform: uppercase!important}
+    Image: http://a.thumbs.redditmedia.com/CkoH3om9i2hwm8pH.png
+    Offset: [0, -950]
+    Size: [300, 300]
+  em:
+    CSS: {color: white!important, font-style: normal!important, left: 50%!important,
+      margin-left: -140px!important, position: absolute!important, top: 12px!important,
+      width: 280px!important}
+    Type: Custom
+  strong:
+    CSS: {bottom: 18px!important, color: white!important, font-weight: normal!important,
+      left: 50%!important, margin-left: -140px!important, position: absolute!important,
+      width: 280px!important}
+    Type: Custom
 /anteup:
   null:
     Image: http://d.thumbs.redditmedia.com/RcQxtSagCYQyGGk9.png
@@ -5,7 +25,7 @@
     Size: [70, 70]
 /bjboom:
   null:
-    Image: http://d.thumbs.redditmedia.com/b2w_EC7WkNbKu6fQ.png
+    Image: http://a.thumbs.redditmedia.com/CkoH3om9i2hwm8pH.png
     Offset: [0, -230]
     Size: [70, 70]
 /bjbubbles:
@@ -32,6 +52,11 @@
     Image: http://d.thumbs.redditmedia.com/RcQxtSagCYQyGGk9.png
     Offset: [-210, 0]
     Size: [70, 70]
+/bjsurprise:
+  null:
+    Image: http://a.thumbs.redditmedia.com/CkoH3om9i2hwm8pH.png
+    Offset: [0, -870]
+    Size: [119, 76]
 /calamity:
   null:
     Image: http://d.thumbs.redditmedia.com/RcQxtSagCYQyGGk9.png
@@ -39,7 +64,7 @@
     Size: [100, 100]
 /calamitywtf:
   null:
-    Image: http://d.thumbs.redditmedia.com/b2w_EC7WkNbKu6fQ.png
+    Image: http://a.thumbs.redditmedia.com/CkoH3om9i2hwm8pH.png
     Offset: [0, -535]
     Size: [78, 101]
 /charity:
@@ -49,7 +74,7 @@
     Size: [70, 70]
 /drrampage:
   null:
-    Image: http://d.thumbs.redditmedia.com/b2w_EC7WkNbKu6fQ.png
+    Image: http://a.thumbs.redditmedia.com/CkoH3om9i2hwm8pH.png
     Offset: [0, -305]
     Size: [70, 70]
 /fightcalamity:
@@ -88,7 +113,7 @@
     Size: [103, 150]
 /harmony:
   null:
-    Image: http://d.thumbs.redditmedia.com/b2w_EC7WkNbKu6fQ.png
+    Image: http://a.thumbs.redditmedia.com/CkoH3om9i2hwm8pH.png
     Offset: [0, -640]
     Size: [200, 225]
 /homage:
@@ -138,12 +163,12 @@
     Size: [70, 70]
 /lpinspire:
   null:
-    Image: http://d.thumbs.redditmedia.com/b2w_EC7WkNbKu6fQ.png
+    Image: http://a.thumbs.redditmedia.com/CkoH3om9i2hwm8pH.png
     Offset: [0, -380]
     Size: [88, 150]
 /lpnotsure:
   null:
-    Image: http://d.thumbs.redditmedia.com/b2w_EC7WkNbKu6fQ.png
+    Image: http://a.thumbs.redditmedia.com/CkoH3om9i2hwm8pH.png
     Size: [150, 150]
 /lpnotwant:
   null:
@@ -205,7 +230,7 @@
     Size: [70, 70]
 /p21fh:
   null:
-    Image: http://d.thumbs.redditmedia.com/b2w_EC7WkNbKu6fQ.png
+    Image: http://a.thumbs.redditmedia.com/CkoH3om9i2hwm8pH.png
     Offset: [0, -155]
     Size: [70, 70]
 /p21fun:
