--- a/tags/vinylscratch.yaml
+++ b/tags/vinylscratch.yaml
@@ -34,6 +34,7 @@
 /vsboring: [+vinylscratch]
 /vscurious: [+vinylscratch]
 /vscute: [+filly, +vinylscratch]
+/vsdance: [+animote, +vinylscratch]
 /vsdeal: [+sunglasses, +vinylscratch]
 /vsderp: [+vinylscratch]
 /vsdrawponies: [+vinylscratch]
@@ -58,6 +59,7 @@
 /vssad: [+vinylscratch]
 /vssalute: [+salute, +vinylscratch]
 /vsshrug: [+shrug, +vinylscratch]
+/vssquee: [+vinylscratch]
 /vssup: [+vinylscratch]
 /vstear: [+vinylscratch]
 /vswhathefuck: [+vinylscratch]
