Missed +nsfw setting on an emote

--- a/tags/mylittlensfw.yaml
+++ b/tags/mylittlensfw.yaml
@@ -1,6 +1,6 @@
 /ajshake: [+animote, +applejack, +nsfw]
 /applepussy: [+remove]
-/bestcentaur: [+nonpony, +sweetiebelle]
+/bestcentaur: [+nonpony, +nsfw, +sweetiebelle]
 /cheeripussy: [+remove]
 /derpypussy: [+remove]
 /derpyshake: [+animote, +derpy, +nsfw]
