Redo extracss application. Now inspects available style properties to decide which file to apply. Probably fixes userscripts not having extracss.

--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -30,6 +30,7 @@
         "bpmotes.css", 
         "emote-classes.css", 
         "combiners-nsfw.css", 
-        "extracss.css"
+        "extracss-pure.css", 
+        "extracss-webkit.css"
     ]
 }
