--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -18,6 +18,7 @@
     "description": "View Reddit ponymotes across the site", 
     "homepage_url": "http://rainbow.mlas1.us/", 
     "manifest_version": 2, 
+    "minimum_chrome_version": "20", 
     "name": "BetterPonymotes", 
     "options_page": "options.html", 
     "permissions": [
