Gave Rayne Storm from r/mylittlesh her own tag

--- a/data/tags.yaml
+++ b/data/tags.yaml
@@ -132,6 +132,7 @@ TagImplications:
   +futashy: [+fluttershy, +oc, +ocpony]
   +jappleack: [+applejack, +oc, +ocpony]
   +karma: [+oc, +ocpony]
+  +raynestorm: [+oc, +ocpony]
   +surprise: [+oc, +ocpony]
   +wildfire: [+oc, +ocpony]
 
