--- a/tags/mylittlesh.yaml
+++ b/tags/mylittlesh.yaml
@@ -12,18 +12,18 @@
 /rrshappy: [+v]
 /rrshorrified: [+v]
 /rrssad: [+v]
-/rrssalute: [+ocpony]
+/rrssalute: [+raynestorm]
 /rrsunamused: [+v]
 /rrsyay: [+v]
-/rsangry: [+ocpony]
-/rscheer: [+ocpony]
-/rscoffee: [+ocpony]
-/rshappy: [+ocpony]
-/rshorrified: [+ocpony]
-/rssad: [+ocpony]
-/rssalute: [+ocpony]
-/rsunamused: [+ocpony]
-/rsyay: [+ocpony]
+/rsangry: [+raynestorm]
+/rscheer: [+raynestorm]
+/rscoffee: [+raynestorm]
+/rshappy: [+raynestorm]
+/rshorrified: [+raynestorm]
+/rssad: [+raynestorm]
+/rssalute: [+raynestorm]
+/rsunamused: [+raynestorm]
+/rsyay: [+raynestorm]
 /smallma: [+nonpony]
 /twitch_alert: [+nonpony]
 /whoislaughingnow: [+nonpony]
