--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -208,15 +208,15 @@ RootVariantEmotes:
     /chi25: /nurse
   r/mylittlecelestias:
     # Unusual- /lr instead of /rl
-    /lrce00: /lce00
-    /lrce01: /lce01
-    /lrce03: /lce03
-    /lrce04: /lce04
-    /lrce05: /lce05
-    /lrce06: /lce06
-    /lrce07: /lce07
+    /lrce00: /lcefilly
+    /lrce01: /lcewat
+    /lrce03: /lcesilence
+    /lrce04: /lcehappy
+    /lrce05: /lcehail
+    /lrce06: /lcescroll
+    /lrce07: /lcesurprised
     /lrce10: /lce10
-    /lrce11: /lce11
+    /lrce11: /lcebattle
     /lrcebattle: /lcebattle
     /lrcefilly: /lcefilly
     /lrcehail: /lcehail
