--- a/tags/mylittlepony.yaml
+++ b/tags/mylittlepony.yaml
@@ -577,12 +577,12 @@
 /snails: [+drop, +snipsandsnails]
 /soawesome: [+drop, +rainbowdash]
 /sotrue: [+drop, +stevenmagnet]
-/sp: [+drop, +formatting]
+/sp: [+drop, +formatting, +hidden]
 /spikenervous: [+drop, +spike]
 /spikepushy: [+drop, +spike]
 /spikewtf: [+drop, +spike]
 /spitfire: [+drop, +spitfire]
-/spoiler: [+drop, +formatting]
+/spoiler: [+drop, +formatting, +hidden]
 /squintyjack: [+applejack, +drop]
 /swagintosh: [+animote, +bigmac, +drop]
 /sweetiebook: [+drop, +v]
